Arquivo final atualizado

--- a/igor-reis-personal/paginaplanos.html
+++ b/igor-reis-personal/paginaplanos.html
@@ -24,7 +24,7 @@
 
                 <p>✅ 2x Sessões de treinos semanais <br>
                 ✅ 8x Sessões de treino mensais <br>
-                ❌ Horário fixos</p>
+                ❌ Horários fixos</p>
             </div>
 
             <div id="b" class="teste">
