Atualização do arquivo final

--- a/igor-reis-personal/index.html
+++ b/igor-reis-personal/index.html
@@ -15,15 +15,17 @@
 </head>
 <body>
   <main>
-    <img src="imagem/igorreislogo.png" alt="Logo">
+    <img src="imagem/igorreislogo.png" alt="Logo" class="logo" id="logo">
 
     <h1>IGOR REIS</h1>
 
     <h2>Personal Trainer</h2>
 
-    <h3>Personalize seu caminho para um corpo mais forte e saudável</h3>
+    <h3>Personalize seu caminho para um corpo mais forte e saudável !</h3>
 
-    <p>&#x1F4DA; CORE 360/BPro Treinamento Físico Funcional</p>
+    <img src="imagem/bprologo.png" alt="bprologo" id="bprologo"> 
+    
+    
 
     <div class="link" id="planos"><a href="paginaplanos.html"><i class="fa">&#128170;</i>Planos</a></div>
     <div class="link" id="instagram"><a href="https://www.instagram.com/igorgreispersonal/"><i class="fa">&#xf16d;</i>Instagram</a></div>
